--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 137,
+      "execution_count": 160,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "009385ee-3c79-421b-f28f-5d650674b6bb"
+        "outputId": "cd5a423c-978a-4ea0-f59d-1a64db9471c8"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 138,
+      "execution_count": 161,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,1].values"
       ],
-      "execution_count": 139,
+      "execution_count": 162,
       "outputs": []
     },
     {
@@ -225,7 +225,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 140,
+      "execution_count": 163,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": 141,
+      "execution_count": 164,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
         "    muestra=np.append(muestra,([x_train[:,0][i]]))\n",
         "    y_muestra=np.append(y_muestra,([y_train[:,0][i]]))"
       ],
-      "execution_count": 142,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -317,14 +317,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "44ab12c6-e629-4357-d6c3-3b5b91b1ac10"
+        "outputId": "e5d02747-5938-444b-b4f3-aeec421627a8"
       },
       "source": [
         "from sklearn.svm import SVR\n",
         "regression = SVR(kernel='rbf')\n",
         "regression.fit(muestra.reshape(-1,1),y_muestra.ravel())"
       ],
-      "execution_count": 143,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +337,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 143
+          "execution_count": 166
         }
       ]
     },
@@ -353,7 +353,7 @@
         "y_valor= sc_y.inverse_transform(y_muestra)\n",
         "y_predic_valor= sc_y.inverse_transform(regression.predict(muestra.reshape(-1,1)))"
       ],
-      "execution_count": 144,
+      "execution_count": 167,
       "outputs": []
     },
     {
@@ -365,7 +365,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 425
         },
-        "outputId": "08b0cb16-bf32-4436-a86e-16dbadf717cc"
+        "outputId": "eeab0e6c-47f0-40a0-d6ea-80134363351b"
       },
       "source": [
         "xx = []; yy = []; yy_predic=[]\n",
@@ -393,7 +393,7 @@
         "      pass \n",
         "print(\"Despues de organizar:\"+\"\\n\"+str(tabla)+\"\\n\")"
       ],
-      "execution_count": 146,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,7 +442,7 @@
         "x_test= sc_x_t.fit_transform(x_test)\n",
         "y_test= sc_y_t.fit_transform(y_test.reshape(-1,1))"
       ],
-      "execution_count": 147,
+      "execution_count": 169,
       "outputs": []
     },
     {
@@ -454,7 +454,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "71d2dd4d-1742-43e6-fe39-05d0111104ac"
+        "outputId": "7f85c66d-e742-4731-e1cd-6efc805d068b"
       },
       "source": [
         "# MODELO SVR - Test\n",
@@ -462,7 +462,7 @@
         "regression = SVR(kernel='rbf')\n",
         "regression.fit(x_test.reshape(-1,1),y_test.ravel())"
       ],
-      "execution_count": 148,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -475,7 +475,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 148
+          "execution_count": 170
         }
       ]
     },
@@ -491,7 +491,7 @@
         "y_valor_t= sc_y_t.inverse_transform(y_test)\n",
         "y_predic_valor_t= sc_y_t.inverse_transform(regression.predict(x_test.reshape(-1,1)))"
       ],
-      "execution_count": 149,
+      "execution_count": 171,
       "outputs": []
     },
     {
@@ -499,11 +499,7 @@
       "metadata": {
         "id": "_vn6bcP_39G6",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 952
-        },
-        "outputId": "d3c8d793-92db-4744-928c-02c9924b4eb0"
+        "colab": {}
       },
       "source": [
         "xx_t = []; yy_t =[]; yy_predic_t=[]\n",
@@ -531,70 +527,8 @@
         "      pass \n",
         "print(\"Despues de organizar:\"+\"\\n\"+str(tabla_t)+\"\\n\")"
       ],
-      "execution_count": 150,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "x_valor_t = [          0\n",
-            "0  201907.0,           0\n",
-            "0  202002.0,           0\n",
-            "0  201904.0,           0\n",
-            "0  201705.0,           0\n",
-            "0  201711.0,           0\n",
-            "0  201902.0,           0\n",
-            "0  201905.0,           0\n",
-            "0  201712.0,           0\n",
-            "0  202003.0]\n",
-            "\n",
-            "y_valor_t = [         0\n",
-            "0  22054.0,          0\n",
-            "0  20935.0,          0\n",
-            "0  23713.0,          0\n",
-            "0  58684.0,          0\n",
-            "0  31413.0,          0\n",
-            "0  25505.0,          0\n",
-            "0  24479.0,          0\n",
-            "0  26733.0,          0\n",
-            "0  19992.0]\n",
-            "\n",
-            "y_predic_t[              0\n",
-            "0  23824.187826,               0\n",
-            "0  21116.341453,               0\n",
-            "0  23956.663254,               0\n",
-            "0  30336.155508,               0\n",
-            "0  30287.089385,               0\n",
-            "0  24044.799579,               0\n",
-            "0  23912.532481,               0\n",
-            "0  30276.681308,               0\n",
-            "0  21117.910312]\n",
-            "\n",
-            "Antes de organizar el test:\n",
-            "[[201907.          22054.          23824.18782589]\n",
-            " [202002.          20935.          21116.34145342]\n",
-            " [201904.          23713.          23956.6632545 ]\n",
-            " [201705.          58684.          30336.15550844]\n",
-            " [201711.          31413.          30287.08938531]\n",
-            " [201902.          25505.          24044.7995792 ]\n",
-            " [201905.          24479.          23912.53248125]\n",
-            " [201712.          26733.          30276.68130807]\n",
-            " [202003.          19992.          21117.91031205]]\n",
-            "\n",
-            "Despues de organizar:\n",
-            "[[201705.          58684.          30336.15550844]\n",
-            " [201711.          31413.          30287.08938531]\n",
-            " [201712.          26733.          30276.68130807]\n",
-            " [201902.          25505.          24044.7995792 ]\n",
-            " [201904.          23713.          23956.6632545 ]\n",
-            " [201905.          24479.          23912.53248125]\n",
-            " [201907.          22054.          23824.18782589]\n",
-            " [202002.          20935.          21116.34145342]\n",
-            " [202003.          19992.          21117.91031205]]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -605,7 +539,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "dc9a484c-666c-4955-d28a-dbaedd8e6496"
+        "outputId": "49d378ab-ff9a-41d1-a6a8-4e6f41ffc2ff"
       },
       "source": [
         "# Graficamos \n",
@@ -616,7 +550,7 @@
         "plt.ylabel(\"Cantidad\")\n",
         "plt.show()"
       ],
-      "execution_count": 151,
+      "execution_count": 173,
       "outputs": [
         {
           "output_type": "display_data",
@@ -642,7 +576,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "d0efde5a-e4f3-4f71-a445-5f05256275e8"
+        "outputId": "c9b5259e-d675-492a-ca74-a1bf4c36284b"
       },
       "source": [
         "# Graficamos test\n",
@@ -653,7 +587,7 @@
         "plt.ylabel(\"Cantidad\")\n",
         "plt.show()"
       ],
-      "execution_count": 152,
+      "execution_count": 174,
       "outputs": [
         {
           "output_type": "display_data",
@@ -941,28 +875,109 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1PoyJJhGLyWE",
+        "id": "95YNYaBDE8t_",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "error_muestra"
+        "var_x1=np.array([x_valor]).T\n",
+        "var_y1=np.array([y_valor]).T"
       ],
-      "execution_count": null,
+      "execution_count": 188,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3L_lVh3vLz_9",
+        "id": "uEvcJCoYF53G",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0201e5cf-19e3-4b1e-a6ec-ed6f513f94a7"
       },
       "source": [
-        "error_test"
+        "var_y1[:,0]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 189,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([19108., 19541., 21942., 20818., 42866., 25478., 23298.])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 189
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-Byj-y-aFatN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "be6052cb-3ab4-4530-f565-ad05482ce13a"
+      },
+      "source": [
+        "var_x1_t[:,0]"
+      ],
+      "execution_count": 190,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([201908., 201906., 201809., 202006., 201703., 202008., 201807.])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 190
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dDO6IxqQAVEg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        },
+        "outputId": "c6b11d37-8d6d-4f63-d2f4-fb196f8560f4"
+      },
+      "source": [
+        "regression.score(var_x1[:,0], var_y1[:,0], sample_weight=None)"
+      ],
+      "execution_count": 191,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-191-e85c46696c24>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mregression\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar_x1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvar_y1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/base.py\u001b[0m in \u001b[0;36mscore\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    420\u001b[0m         \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mr2_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    421\u001b[0m         \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_regression\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0m_check_reg_targets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 422\u001b[0;31m         \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    423\u001b[0m         \u001b[0;31m# XXX: Remove the check in 0.23\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    424\u001b[0m         \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_reg_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/svm/_base.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    313\u001b[0m         \u001b[0my_pred\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshape\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn_samples\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    314\u001b[0m         \"\"\"\n\u001b[0;32m--> 315\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_for_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    316\u001b[0m         \u001b[0mpredict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sparse_predict\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sparse\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dense_predict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    317\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/svm/_base.py\u001b[0m in \u001b[0;36m_validate_for_predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    445\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    446\u001b[0m         X = check_array(X, accept_sparse='csr', dtype=np.float64, order=\"C\",\n\u001b[0;32m--> 447\u001b[0;31m                         accept_large_sparse=False)\n\u001b[0m\u001b[1;32m    448\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sparse\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misspmatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    449\u001b[0m             \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsr_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    554\u001b[0m                     \u001b[0;34m\"Reshape your data either using array.reshape(-1, 1) if \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    555\u001b[0m                     \u001b[0;34m\"your data has a single feature or array.reshape(1, -1) \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 556\u001b[0;31m                     \"if it contains a single sample.\".format(array))\n\u001b[0m\u001b[1;32m    557\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    558\u001b[0m         \u001b[0;31m# in the future np.flexible dtypes will be handled like object dtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Expected 2D array, got 1D array instead:\narray=[201908. 201906. 201809. 202006. 201703. 202008. 201807.].\nReshape your data either using array.reshape(-1, 1) if your data has a single feature or array.reshape(1, -1) if it contains a single sample."
+          ]
+        }
+      ]
     }
   ]
 }
