--- a/Regresión/Regresion_SVR_Bajas_PAQUETE.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_PAQUETE.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 1,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -74,18 +74,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "e81dcae7-7faa-4f6e-af01-29d36b116495"
+        "outputId": "d453ce4a-3149-468b-cbcc-31e2085bceec"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -103,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,3].values"
       ],
-      "execution_count": 5,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -115,12 +115,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "1a9d4939-af98-443b-91a8-6f735f671c46"
+        "outputId": "8b1e04ee-94ca-4455-c3ba-34cec089fc52"
       },
       "source": [
         "pd.DataFrame(x)"
       ],
-      "execution_count": 6,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +241,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 52
         }
       ]
     },
@@ -263,15 +263,14 @@
         "colab": {}
       },
       "source": [
-        "'''from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
         "from sklearn.compose import ColumnTransformer\n",
         "labelencoder  = LabelEncoder()\n",
         "x[:,0] = labelencoder.fit_transform(x[:,0])\n",
-        "x[:,1] = labelencoder.fit_transform(x[:,1])\n",
-        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
-        "x= np.array(ct.fit_transform(x),dtype=np.integer)'''"
+        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0])],remainder='passthrough')\n",
+        "x= np.array(ct.fit_transform(x),dtype=np.int)"
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -305,7 +304,7 @@
         "colab": {}
       },
       "source": [
-        "pd.DataFrame(x)"
+        "pd.DataFrame(x[:,0])"
       ],
       "execution_count": null,
       "outputs": []
@@ -430,7 +429,7 @@
         "regression = SVR(kernel='rbf')\n",
         "regression.fit(muestra.reshape(-1,1),y_muestra.ravel())"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
