--- a/Regresión/Regresion_SVR_Bajas_PAQUETE.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_PAQUETE.ipynb
@@ -274,6 +274,19 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nmeZH3I84EtO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.DataFrame(x)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "elfJqy4EBVo8",
@@ -291,9 +304,9 @@
         "colab": {}
       },
       "source": [
-        "'''x = x[:,1:]'''"
+        "x = x[:,1:]"
       ],
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": []
     },
     {
