--- a/Regresión/Regresion_SVR_Bajas_PAQUETE.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_PAQUETE.ipynb
@@ -111,139 +111,13 @@
       "metadata": {
         "id": "4zakNkcb222f",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        },
-        "outputId": "8b1e04ee-94ca-4455-c3ba-34cec089fc52"
+        "colab": {}
       },
       "source": [
         "pd.DataFrame(x)"
       ],
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>LB</td>\n",
-              "      <td>18078</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>LB</td>\n",
-              "      <td>17986</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>LB</td>\n",
-              "      <td>17952</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>DUO</td>\n",
-              "      <td>95</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>DUO</td>\n",
-              "      <td>369</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>39543</th>\n",
-              "      <td>BA</td>\n",
-              "      <td>1104</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>39544</th>\n",
-              "      <td>LB</td>\n",
-              "      <td>10271</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>39545</th>\n",
-              "      <td>LB</td>\n",
-              "      <td>8872</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>39546</th>\n",
-              "      <td>TRIO</td>\n",
-              "      <td>1790</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>39547</th>\n",
-              "      <td>DUO</td>\n",
-              "      <td>2544</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>39548 rows × 3 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "          0      1  2\n",
-              "0        LB  18078  6\n",
-              "1        LB  17986  3\n",
-              "2        LB  17952  2\n",
-              "3       DUO     95  5\n",
-              "4       DUO    369  2\n",
-              "...     ...    ... ..\n",
-              "39543    BA   1104  6\n",
-              "39544    LB  10271  2\n",
-              "39545    LB   8872  5\n",
-              "39546  TRIO   1790  3\n",
-              "39547   DUO   2544  2\n",
-              "\n",
-              "[39548 rows x 3 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 52
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -310,19 +184,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9HByNNfG68OE",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "pd.DataFrame(x[:,0])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "wNusxNzT3UMP",
@@ -343,7 +204,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -370,7 +231,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -389,19 +250,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jLA8cx9O1gCL",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "len(x_test[:,0])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "SNeWMZLd4_UL",
         "colab_type": "code",
         "colab": {}
@@ -412,6 +260,42 @@
         "for i in range(0, 7):\n",
         "    muestra=np.append(muestra,([x_train[:,0][i]]))\n",
         "    y_muestra=np.append(y_muestra,([y_train[:,0][i]]))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0liVi8gi6pae",
+        "colab_type": "text"
+      },
+      "source": [
+        "### DETERMINAR DIMENSIONES.  ELIMINACION HACIA ATRAS"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Elnz3K6k62oQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x_train=np.append(arr=np.ones((len(x_train[:,0]),1)).astype(int),values=x_train,axis=1)"
+      ],
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BSfzmrR-7FeO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.DataFrame(x_train)"
       ],
       "execution_count": null,
       "outputs": []
