--- a/Regresión/Regresion_SVR_Bajas_PAQUETE.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_PAQUETE.ipynb
@@ -290,6 +290,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "um6qq4xg9qX9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "BSfzmrR-7FeO",
         "colab_type": "code",
         "colab": {}
