--- a/Regresión/Regresion_SVR_Bajas_PAQUETE.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_PAQUETE.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 13,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c0761b82-d45a-4a85-9a5d-56f9c4890fc4"
+        "outputId": "4df8cb86-e58e-4f90-9185-175669d991e4"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 14,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,3].values"
       ],
-      "execution_count": 15,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -115,12 +115,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "4380ce2a-1d3d-4074-a724-a94a14176a19"
+        "outputId": "39b17f80-eb1a-4a90-fb5b-12595108ae3a"
       },
       "source": [
         "pd.DataFrame(x)"
       ],
-      "execution_count": 16,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +241,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 33
         }
       ]
     },
@@ -270,7 +270,7 @@
         "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0])],remainder='passthrough')\n",
         "x= np.array(ct.fit_transform(x),dtype=np.int)"
       ],
-      "execution_count": 17,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -282,12 +282,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "478d15cf-1879-4072-d678-a1a64131821b"
+        "outputId": "261e4cae-c529-43b6-b3f7-5c23d221c6bd"
       },
       "source": [
         "pd.DataFrame(x)"
       ],
-      "execution_count": 18,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +480,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 35
         }
       ]
     },
@@ -504,7 +504,7 @@
       "source": [
         "x = x[:,1:]"
       ],
-      "execution_count": 19,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -528,7 +528,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 20,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -555,7 +555,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": 21,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -608,7 +608,7 @@
       "source": [
         "x_train=np.append(arr=np.ones((len(x_train[:,0]),1)).astype(int),values=x_train,axis=1)"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -619,9 +619,23 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import statsmodels.api as sm\n",
+        "def elimnaAtras (x,SL):\n",
+        "  numvar = len(x[0])\n",
+        "  for i in range(0 , numvar):\n",
+        "    regresor_ols = sm.OLS(y, x.tolist()).fit()\n",
+        "    maxvar=max(regresor_ols.pvalues).astype(float)\n",
+        "    if maxvar>SL:\n",
+        "      for j in range(0,numvar-i):\n",
+        "        if (regresor_ols.pvalues[j].astype(float)== maxvar):\n",
+        "          x=np.delete(x,j,1)\n",
+        "  regresor_ols.summary()\n",
+        "  return x\n",
+        "SL=0.05\n",
+        "x_opt = x[:,[0,1,2,3,4,5]]        \n",
+        "x_modelo = elimnaAtras(x_opt, SL)"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -629,13 +643,247 @@
       "metadata": {
         "id": "BSfzmrR-7FeO",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        },
+        "outputId": "9ec3b99e-1629-4eff-ca3e-838993942c3b"
       },
       "source": [
-        "pd.DataFrame(x_train)"
+        "pd.DataFrame(x_modelo)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "      <th>2</th>\n",
+              "      <th>3</th>\n",
+              "      <th>4</th>\n",
+              "      <th>5</th>\n",
+              "      <th>6</th>\n",
+              "      <th>7</th>\n",
+              "      <th>8</th>\n",
+              "      <th>9</th>\n",
+              "      <th>10</th>\n",
+              "      <th>11</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>-0.014876</td>\n",
+              "      <td>-0.829995</td>\n",
+              "      <td>-0.728744</td>\n",
+              "      <td>-0.005622</td>\n",
+              "      <td>2.402464</td>\n",
+              "      <td>-0.026379</td>\n",
+              "      <td>-0.467288</td>\n",
+              "      <td>1.450313</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>-0.014876</td>\n",
+              "      <td>-0.829995</td>\n",
+              "      <td>1.372223</td>\n",
+              "      <td>-0.005622</td>\n",
+              "      <td>-0.416239</td>\n",
+              "      <td>-0.026379</td>\n",
+              "      <td>0.095942</td>\n",
+              "      <td>-0.283268</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>-0.014876</td>\n",
+              "      <td>-0.829995</td>\n",
+              "      <td>1.372223</td>\n",
+              "      <td>-0.005622</td>\n",
+              "      <td>-0.416239</td>\n",
+              "      <td>-0.026379</td>\n",
+              "      <td>0.625236</td>\n",
+              "      <td>-0.283268</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>-0.014876</td>\n",
+              "      <td>-0.829995</td>\n",
+              "      <td>-0.728744</td>\n",
+              "      <td>-0.005622</td>\n",
+              "      <td>2.402464</td>\n",
+              "      <td>-0.026379</td>\n",
+              "      <td>-0.685855</td>\n",
+              "      <td>1.450313</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>-0.014876</td>\n",
+              "      <td>1.204827</td>\n",
+              "      <td>-0.728744</td>\n",
+              "      <td>-0.005622</td>\n",
+              "      <td>-0.416239</td>\n",
+              "      <td>-0.026379</td>\n",
+              "      <td>0.122718</td>\n",
+              "      <td>-1.438989</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>31633</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>-0.014876</td>\n",
+              "      <td>-0.829995</td>\n",
+              "      <td>1.372223</td>\n",
+              "      <td>-0.005622</td>\n",
+              "      <td>-0.416239</td>\n",
+              "      <td>-0.026379</td>\n",
+              "      <td>1.650508</td>\n",
+              "      <td>-0.861129</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>31634</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>-0.014876</td>\n",
+              "      <td>-0.829995</td>\n",
+              "      <td>-0.728744</td>\n",
+              "      <td>-0.005622</td>\n",
+              "      <td>-0.416239</td>\n",
+              "      <td>-0.026379</td>\n",
+              "      <td>-0.458882</td>\n",
+              "      <td>-1.438989</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>31635</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>-0.014876</td>\n",
+              "      <td>1.204827</td>\n",
+              "      <td>-0.728744</td>\n",
+              "      <td>-0.005622</td>\n",
+              "      <td>-0.416239</td>\n",
+              "      <td>-0.026379</td>\n",
+              "      <td>-0.619538</td>\n",
+              "      <td>0.872453</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>31636</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>-0.014876</td>\n",
+              "      <td>-0.829995</td>\n",
+              "      <td>-0.728744</td>\n",
+              "      <td>-0.005622</td>\n",
+              "      <td>2.402464</td>\n",
+              "      <td>-0.026379</td>\n",
+              "      <td>-0.782996</td>\n",
+              "      <td>1.450313</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>31637</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>-0.014876</td>\n",
+              "      <td>1.204827</td>\n",
+              "      <td>-0.728744</td>\n",
+              "      <td>-0.005622</td>\n",
+              "      <td>-0.416239</td>\n",
+              "      <td>-0.026379</td>\n",
+              "      <td>-0.655654</td>\n",
+              "      <td>-0.861129</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>31638 rows × 12 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        0    1    2    3   ...        8         9         10        11\n",
+              "0      1.0  1.0  1.0  1.0  ...  2.402464 -0.026379 -0.467288  1.450313\n",
+              "1      1.0  1.0  1.0  1.0  ... -0.416239 -0.026379  0.095942 -0.283268\n",
+              "2      1.0  1.0  1.0  1.0  ... -0.416239 -0.026379  0.625236 -0.283268\n",
+              "3      1.0  1.0  1.0  1.0  ...  2.402464 -0.026379 -0.685855  1.450313\n",
+              "4      1.0  1.0  1.0  1.0  ... -0.416239 -0.026379  0.122718 -1.438989\n",
+              "...    ...  ...  ...  ...  ...       ...       ...       ...       ...\n",
+              "31633  1.0  1.0  1.0  1.0  ... -0.416239 -0.026379  1.650508 -0.861129\n",
+              "31634  1.0  1.0  1.0  1.0  ... -0.416239 -0.026379 -0.458882 -1.438989\n",
+              "31635  1.0  1.0  1.0  1.0  ... -0.416239 -0.026379 -0.619538  0.872453\n",
+              "31636  1.0  1.0  1.0  1.0  ...  2.402464 -0.026379 -0.782996  1.450313\n",
+              "31637  1.0  1.0  1.0  1.0  ... -0.416239 -0.026379 -0.655654 -0.861129\n",
+              "\n",
+              "[31638 rows x 12 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
     },
     {
       "cell_type": "markdown",
