--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -29,8 +29,8 @@
         "id": "-J3qDXeFwvSb"
       },
       "source": [
-        "# Regresión con soporte máquina vectorial (SVR)\n",
-        "# objetivo: Predecir las bajas del mes"
+        "## Cuantas serán las bajas voluntarias de los clientes fijos para el periodo 202009. \n",
+        " "
       ]
     },
     {
